tests/errors/error_display/test_hll_defer_ref_obligation_unfulfilled.si

        struct Box: Drop + Move { val: i64 }
        fn f(r: &drop Box) {
            let x = r.*;
            defer r.* = Box { val: 5 };
        }
    